[package]
name = "keepass-to-env"
version = "0.3.0"
edition = "2021"
authors = ["Syndim <im@syndim.org>"]
repository = "https://github.com/Syndim/keepass-to-env"
description = "A simple tool to convert Keepass database to environment variable"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kte"
path = "src/main.rs"

[dependencies]
keepass = "0.7"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
rpassword = "7"
